[tool.poetry]
name = "txtadv"
version = "1.0-beta3"
description = "A feature-rich text adventure library! Supports story files, although currently only a custom format."
readme = "BUILD_DESC.md"
authors = ["sdft <averse.abfun@gmail.com>"]
license = "MIT"
packages = [
    { include = "txtadv" }
]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
pylint = "^2.17.0"
# Optional dependencies:
pynecone = { version = "^0.1.20", optional = true }

[tool.poetry.extras]
web = ["pynecone"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"